new algo testing

--- a/past30DaysBestWorst-133perc.ipynb
+++ b/past30DaysBestWorst-133perc.ipynb
@@ -12,8 +12,8 @@
     "from datetime import datetime, timedelta\n",
     "from collections import Counter\n",
     "\n",
-    "API_KEY = ''  # Replace with your actual API key\n",
-    "DISCORD_WEBHOOK_URL = ''\n"
+    "API_KEY = '3102ef91f3e039d1d49f03cb0537acab'  # Replace with your actual API key\n",
+    "DISCORD_WEBHOOK_URL = 'https://discordapp.com/api/webhooks/1402749967172636795/ew4ANKYWlZy-aGC6FHPk406ZeVW4_Nc8sObcnwMY4sZmS9110u6svtKZqmhpYay0ycAP'\n"
    ]
   },
   {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "id": "4a38c684-443a-4d44-b22e-50164356c94a",
    "metadata": {},
    "outputs": [
@@ -772,84 +772,84 @@
      "output_type": "stream",
      "text": [
       "📈 Monthly Performance:\n",
-      "Month 1: -10.25%\n",
-      "Month 2: -15.02%\n",
-      "Month 3: -10.53%\n",
-      "Month 4: -5.87%\n",
-      "Month 5: -11.93%\n",
-      "Month 6: -10.97%\n",
-      "Month 7: 10.54%\n",
-      "Month 8: -22.01%\n",
-      "Month 9: 25.46%\n",
-      "Month 10: -10.59%\n",
-      "Month 11: 15.54%\n",
+      "Month 1: 4.99%\n",
+      "Month 2: 7.17%\n",
+      "Month 3: 36.76%\n",
+      "Month 4: 5.60%\n",
+      "Month 5: -13.14%\n",
+      "Month 6: 5.53%\n",
+      "Month 7: 10.69%\n",
+      "Month 8: -1.23%\n",
+      "Month 9: 27.13%\n",
+      "Month 10: 6.65%\n",
+      "Month 11: 5.56%\n",
       "\n",
       "📄 Trade Log:\n",
-      "2024-09-05 → 2024-09-13 | LONG ('FTNT', 'close') | Entry: 75.80, Exit: 75.01, Return: -1.04% [STOP LOSS HIT]\n",
-      "2024-09-05 → 2024-09-13 | LONG ('LUV', 'close') | Entry: 29.81, Exit: 28.68, Return: -3.79% [STOP LOSS HIT]\n",
-      "2024-09-05 → 2024-09-13 | SHORT ('DG', 'close') | Entry: 80.41, Exit: 84.75, Return: -5.40% [STOP LOSS HIT]\n",
-      "2024-09-05 → 2024-09-13 | SHORT ('SMCI', 'close') | Entry: 41.46, Exit: 45.72, Return: -10.27% [STOP LOSS HIT]\n",
-      "2024-10-05 → 2024-11-04 | LONG ('VST', 'close') | Entry: 131.27, Exit: 115.74, Return: -11.83% [STOP LOSS HIT]\n",
-      "2024-10-05 → 2024-11-04 | LONG ('CEG', 'close') | Entry: 278.56, Exit: 225.95, Return: -18.89% [STOP LOSS HIT]\n",
-      "2024-10-05 → 2024-11-04 | SHORT ('HUM', 'close') | Entry: 236.29, Exit: 255.55, Return: -8.15% [STOP LOSS HIT]\n",
-      "2024-10-05 → 2024-11-04 | SHORT ('MRNA', 'close') | Entry: 58.72, Exit: 53.54, Return: 8.82% [STOP LOSS HIT]\n",
-      "2024-11-04 → 2024-11-25 | LONG ('UAL', 'close') | Entry: 77.25, Exit: 96.83, Return: 25.35% [STOP LOSS HIT]\n",
-      "2024-11-04 → 2024-11-25 | LONG ('PAYC', 'close') | Entry: 211.46, Exit: 234.63, Return: 10.96% [STOP LOSS HIT]\n",
-      "2024-11-04 → 2024-11-25 | SHORT ('SMCI', 'close') | Entry: 26.03, Exit: 38.41, Return: -47.56% [STOP LOSS HIT]\n",
-      "2024-11-04 → 2024-11-25 | SHORT ('EL', 'close') | Entry: 66.45, Exit: 72.97, Return: -9.81% [STOP LOSS HIT]\n",
-      "2024-12-04 → 2025-01-03 | LONG ('COIN', 'close') | Entry: 330.94, Exit: 270.65, Return: -18.22%\n",
-      "2024-12-04 → 2025-01-03 | LONG ('PLTR', 'close') | Entry: 69.85, Exit: 79.89, Return: 14.37%\n",
-      "2024-12-04 → 2025-01-03 | SHORT ('MPWR', 'close') | Entry: 581.63, Exit: 619.87, Return: -6.57%\n",
-      "2024-12-04 → 2025-01-03 | SHORT ('MRNA', 'close') | Entry: 41.63, Exit: 42.18, Return: -1.32%\n",
-      "2025-01-03 → 2025-01-13 | LONG ('AVGO', 'close') | Entry: 232.55, Exit: 225.29, Return: -3.12% [STOP LOSS HIT]\n",
-      "2025-01-03 → 2025-01-13 | LONG ('TSLA', 'close') | Entry: 410.44, Exit: 403.31, Return: -1.74% [STOP LOSS HIT]\n",
-      "2025-01-03 → 2025-01-13 | SHORT ('NUE', 'close') | Entry: 115.45, Exit: 122.88, Return: -6.44% [STOP LOSS HIT]\n",
-      "2025-01-03 → 2025-01-13 | SHORT ('CVS', 'close') | Entry: 45.77, Exit: 51.52, Return: -12.56% [STOP LOSS HIT]\n",
-      "2025-02-02 → 2025-03-03 | LONG ('CVS', 'close') | Entry: 55.95, Exit: 64.90, Return: 16.00% [STOP LOSS HIT]\n",
-      "2025-02-02 → 2025-03-03 | LONG ('CEG', 'close') | Entry: 306.31, Exit: 232.29, Return: -24.17% [STOP LOSS HIT]\n",
-      "2025-02-02 → 2025-03-03 | SHORT ('EIX', 'close') | Entry: 52.44, Exit: 55.27, Return: -5.40% [STOP LOSS HIT]\n",
-      "2025-02-02 → 2025-03-03 | SHORT ('PCG', 'close') | Entry: 15.16, Exit: 16.43, Return: -8.38% [STOP LOSS HIT]\n",
-      "2025-03-04 → 2025-04-03 | LONG ('SMCI', 'close') | Entry: 39.14, Exit: 32.32, Return: -17.42%\n",
-      "2025-03-04 → 2025-04-03 | LONG ('YUM', 'close') | Entry: 158.41, Exit: 161.45, Return: 1.92%\n",
-      "2025-03-04 → 2025-04-03 | SHORT ('TTD', 'close') | Entry: 67.60, Exit: 49.08, Return: 27.40%\n",
-      "2025-03-04 → 2025-04-03 | SHORT ('XYZ', 'close') | Entry: 59.43, Exit: 53.97, Return: 9.19%\n",
-      "2025-04-03 → 2025-04-09 | LONG ('DG', 'close') | Entry: 94.41, Exit: 86.02, Return: -8.89% [STOP LOSS HIT]\n",
-      "2025-04-03 → 2025-04-09 | LONG ('LW', 'close') | Entry: 59.57, Exit: 55.26, Return: -7.24% [STOP LOSS HIT]\n",
-      "2025-04-03 → 2025-04-09 | SHORT ('UAL', 'close') | Entry: 60.23, Exit: 70.83, Return: -17.60% [STOP LOSS HIT]\n",
-      "2025-04-03 → 2025-04-09 | SHORT ('MCHP', 'close') | Entry: 40.71, Exit: 44.90, Return: -10.29% [STOP LOSS HIT]\n",
-      "2025-05-03 → 2025-06-02 | LONG ('PLTR', 'close') | Entry: 123.77, Exit: 132.04, Return: 6.68%\n",
-      "2025-05-03 → 2025-06-02 | LONG ('GEV', 'close') | Entry: 401.10, Exit: 485.16, Return: 20.96%\n",
-      "2025-05-03 → 2025-06-02 | SHORT ('UNH', 'close') | Entry: 404.81, Exit: 304.72, Return: 24.73%\n",
-      "2025-05-03 → 2025-06-02 | SHORT ('BDX', 'close') | Entry: 167.00, Exit: 169.40, Return: -1.44%\n",
-      "2025-06-02 → 2025-06-12 | LONG ('NRG', 'close') | Entry: 158.49, Exit: 151.00, Return: -4.73% [STOP LOSS HIT]\n",
-      "2025-06-02 → 2025-06-12 | LONG ('TTD', 'close') | Entry: 74.77, Exit: 70.57, Return: -5.62% [STOP LOSS HIT]\n",
-      "2025-06-02 → 2025-06-12 | SHORT ('UNH', 'close') | Entry: 304.72, Exit: 318.50, Return: -4.52% [STOP LOSS HIT]\n",
-      "2025-06-02 → 2025-06-12 | SHORT ('REGN', 'close') | Entry: 490.81, Exit: 521.84, Return: -6.32% [STOP LOSS HIT]\n",
-      "2025-07-02 → 2025-08-01 | LONG ('COIN', 'close') | Entry: 354.45, Exit: 314.69, Return: -11.22%\n",
-      "2025-07-02 → 2025-08-01 | LONG ('ORCL', 'close') | Entry: 229.98, Exit: 244.42, Return: 6.28%\n",
-      "2025-07-02 → 2025-08-01 | SHORT ('CNC', 'close') | Entry: 33.78, Exit: 25.91, Return: 23.30%\n",
-      "2025-07-02 → 2025-08-01 | SHORT ('FTV', 'close') | Entry: 53.34, Exit: 46.55, Return: 12.73%\n",
+      "2024-08-31 → 2024-09-30 | LONG ('FTNT', 'close') | Entry: 77.13, Exit: 77.55, Return: 0.54%\n",
+      "2024-08-31 → 2024-09-30 | LONG ('SBUX', 'close') | Entry: 93.18, Exit: 97.49, Return: 4.63%\n",
+      "2024-08-31 → 2024-09-30 | SHORT ('DG', 'close') | Entry: 83.79, Exit: 84.57, Return: -0.93%\n",
+      "2024-08-31 → 2024-09-30 | SHORT ('SMCI', 'close') | Entry: 44.18, Exit: 41.64, Return: 5.75%\n",
+      "2024-09-30 → 2024-10-30 | LONG ('VST', 'close') | Entry: 118.54, Exit: 124.11, Return: 4.70%\n",
+      "2024-09-30 → 2024-10-30 | LONG ('CEG', 'close') | Entry: 260.02, Exit: 261.78, Return: 0.68%\n",
+      "2024-09-30 → 2024-10-30 | SHORT ('DLTR', 'close') | Entry: 70.32, Exit: 63.31, Return: 9.97%\n",
+      "2024-09-30 → 2024-10-30 | SHORT ('MCK', 'close') | Entry: 494.42, Exit: 499.34, Return: -1.00%\n",
+      "2024-10-30 → 2024-11-29 | LONG ('UAL', 'close') | Entry: 80.42, Exit: 96.83, Return: 20.41%\n",
+      "2024-10-30 → 2024-11-29 | LONG ('TPL', 'close') | Entry: 1153.63, Exit: 1600.09, Return: 38.70%\n",
+      "2024-10-30 → 2024-11-29 | SHORT ('ENPH', 'close') | Entry: 82.47, Exit: 71.35, Return: 13.48%\n",
+      "2024-10-30 → 2024-11-29 | SHORT ('ELV', 'close') | Entry: 410.76, Exit: 406.96, Return: 0.93%\n",
+      "2024-11-29 → 2024-12-27 | LONG ('PLTR', 'close') | Entry: 67.08, Exit: 79.08, Return: 17.89%\n",
+      "2024-11-29 → 2024-12-27 | LONG ('AXON', 'close') | Entry: 646.96, Exit: 610.98, Return: -5.56%\n",
+      "2024-11-29 → 2024-12-27 | SHORT ('MPWR', 'close') | Entry: 567.64, Exit: 612.70, Return: -7.94%\n",
+      "2024-11-29 → 2024-12-27 | SHORT ('MRNA', 'close') | Entry: 43.06, Exit: 40.13, Return: 6.80%\n",
+      "2024-12-29 → 2025-01-07 | LONG ('AVGO', 'close') | Entry: 235.58, Exit: 228.64, Return: -2.95% [STOP LOSS HIT]\n",
+      "2024-12-29 → 2025-01-07 | LONG ('TSLA', 'close') | Entry: 417.41, Exit: 394.36, Return: -5.52% [STOP LOSS HIT]\n",
+      "2024-12-29 → 2025-01-07 | SHORT ('TPL', 'close') | Entry: 1107.43, Exit: 1258.29, Return: -13.62% [STOP LOSS HIT]\n",
+      "2024-12-29 → 2025-01-07 | SHORT ('CVS', 'close') | Entry: 43.94, Exit: 45.78, Return: -4.19% [STOP LOSS HIT]\n",
+      "2025-01-28 → 2025-02-27 | LONG ('CVS', 'close') | Entry: 57.33, Exit: 64.48, Return: 12.47%\n",
+      "2025-01-28 → 2025-02-27 | LONG ('CEG', 'close') | Entry: 278.80, Exit: 249.74, Return: -10.42%\n",
+      "2025-01-28 → 2025-02-27 | SHORT ('EIX', 'close') | Entry: 56.11, Exit: 51.34, Return: 8.50%\n",
+      "2025-01-28 → 2025-02-27 | SHORT ('PCG', 'close') | Entry: 15.96, Exit: 15.88, Return: 0.50%\n",
+      "2025-02-27 → 2025-03-28 | LONG ('SMCI', 'close') | Entry: 42.95, Exit: 34.26, Return: -20.23%\n",
+      "2025-02-27 → 2025-03-28 | LONG ('TMUS', 'close') | Entry: 264.17, Exit: 264.93, Return: 0.29%\n",
+      "2025-02-27 → 2025-03-28 | SHORT ('TTD', 'close') | Entry: 71.49, Exit: 55.85, Return: 21.88%\n",
+      "2025-02-27 → 2025-03-28 | SHORT ('DECK', 'close') | Entry: 138.49, Exit: 111.56, Return: 19.45%\n",
+      "2025-03-29 → 2025-04-28 | LONG ('AES', 'close') | Entry: 12.42, Exit: 10.19, Return: -17.95%\n",
+      "2025-03-29 → 2025-04-28 | LONG ('HII', 'close') | Entry: 204.04, Exit: 228.35, Return: 11.91%\n",
+      "2025-03-29 → 2025-04-28 | SHORT ('DAL', 'close') | Entry: 43.60, Exit: 41.96, Return: 3.76%\n",
+      "2025-03-29 → 2025-04-28 | SHORT ('NTAP', 'close') | Entry: 87.84, Exit: 88.00, Return: -0.18%\n",
+      "2025-04-28 → 2025-05-28 | LONG ('PLTR', 'close') | Entry: 114.65, Exit: 123.76, Return: 7.95%\n",
+      "2025-04-28 → 2025-05-28 | LONG ('GEV', 'close') | Entry: 370.06, Exit: 485.01, Return: 31.06%\n",
+      "2025-04-28 → 2025-05-28 | SHORT ('ENPH', 'close') | Entry: 46.47, Exit: 38.96, Return: 16.16%\n",
+      "2025-04-28 → 2025-05-28 | SHORT ('GPN', 'close') | Entry: 74.31, Exit: 74.99, Return: -0.92%\n",
+      "2025-05-28 → 2025-06-27 | LONG ('STX', 'close') | Entry: 117.34, Exit: 141.44, Return: 20.54%\n",
+      "2025-05-28 → 2025-06-27 | LONG ('NRG', 'close') | Entry: 156.06, Exit: 162.67, Return: 4.24%\n",
+      "2025-05-28 → 2025-06-27 | SHORT ('UNH', 'close') | Entry: 298.11, Exit: 309.11, Return: -3.69%\n",
+      "2025-05-28 → 2025-06-27 | SHORT ('LLY', 'close') | Entry: 719.39, Exit: 775.45, Return: -7.79%\n",
+      "2025-06-27 → 2025-07-25 | LONG ('COIN', 'close') | Entry: 353.43, Exit: 391.66, Return: 10.82%\n",
+      "2025-06-27 → 2025-07-25 | LONG ('MU', 'close') | Entry: 124.76, Exit: 111.26, Return: -10.82%\n",
+      "2025-06-27 → 2025-07-25 | SHORT ('LULU', 'close') | Entry: 235.02, Exit: 219.43, Return: 6.63%\n",
+      "2025-06-27 → 2025-07-25 | SHORT ('FTV', 'close') | Entry: 53.94, Exit: 51.52, Return: 4.49%\n",
       "\n",
       "💰 Total Portfolio Return:\n",
-      "-43.73%\n",
+      "133.05%\n",
       "\n",
       "📌 Stocks to BUY NOW (based on last 30 days):\n",
-      "ANET: 36.81%\n",
-      "GNRC: 30.80%\n",
+      "GEV: 29.98%\n",
+      "GNRC: 28.56%\n",
       "\n",
       "📌 Stocks to SHORT NOW (based on last 30 days):\n",
-      "IT: -39.04%\n",
-      "CHTR: -35.82%\n",
+      "CHTR: -35.80%\n",
+      "MOH: -35.09%\n",
       "Message sent to Discord!\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
-    "    #start_date = pd.Timestamp(\"2024-08-15\")\n",
-    "    #end_date = pd.Timestamp(\"2025-08-15\")\n",
-    "    end_date = pd.Timestamp(datetime.today().date())  # Today’s date (no time part)\n",
-    "    start_date = end_date - pd.Timedelta(days=365)\n",
+    "    start_date = pd.Timestamp(\"2024-08-01\")\n",
+    "    end_date = pd.Timestamp(\"2025-08-01\")\n",
+    "    #end_date = pd.Timestamp(datetime.today().date())  # Today’s date (no time part)\n",
+    "    #start_date = end_date - pd.Timedelta(days=365)\n",
     "    excluded_tickers = None\n",
     "\n",
     "    (\n",
