--- a/30_60_day_volatility_sell.ipynb
+++ b/30_60_day_volatility_sell.ipynb
@@ -2,17 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 77,
    "id": "7f1b2632-5529-4ca8-9c55-8abaf4f01a0d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ib_insync import *"
+    "from ib_insync import *\n",
+    "from datetime import datetime\n",
+    "from math import log, sqrt, exp\n",
+    "from scipy.stats import norm\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 78,
    "id": "f2c29975-0447-4d04-ac81-093c95ca8beb",
    "metadata": {},
    "outputs": [
@@ -27,37 +31,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Error 200, reqId 7: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251114', strike=262.5, right='C', multiplier='USD', exchange='SMART')\n",
-      "Error 200, reqId 8: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251114', strike=262.5, right='C', multiplier='USD', exchange='SMART')\n",
-      "Error 200, reqId 11: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251219', strike=262.5, right='C', multiplier='USD', exchange='SMART')\n",
-      "Error 200, reqId 12: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251219', strike=262.5, right='C', multiplier='USD', exchange='SMART')\n",
-      "Error 10276, reqId 22: News feed is not allowed., contract: Stock(conId=265598, symbol='AAPL', exchange='SMART', primaryExchange='NASDAQ', currency='USD', localSymbol='AAPL', tradingClass='NMS')\n",
-      "Error 10276, reqId 26: News feed is not allowed., contract: Stock(conId=265598, symbol='AAPL', exchange='SMART', primaryExchange='NASDAQ', currency='USD', localSymbol='AAPL', tradingClass='NMS')\n",
-      "Error 10276, reqId 30: News feed is not allowed., contract: Stock(conId=265598, symbol='AAPL', exchange='SMART', primaryExchange='NASDAQ', currency='USD', localSymbol='AAPL', tradingClass='NMS')\n",
-      "Error 10276, reqId 33: News feed is not allowed., contract: Stock(symbol='AAPL')\n",
-      "Error 200, reqId 40: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251121', strike=35.0, right='C', exchange='SMART')\n",
-      "Error 200, reqId 41: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251121', strike=35.0, right='C', exchange='SMART')\n",
-      "Error 10276, reqId 42: News feed is not allowed., contract: Stock(symbol='AAPL')\n",
-      "Error 200, reqId 49: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251121', strike=35.0, right='C', exchange='SMART')\n",
-      "Error 200, reqId 50: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251121', strike=35.0, right='C', exchange='SMART')\n",
-      "Error 321, reqId 80: Error validating request.-'co' : cause - Invalid contract id\n",
-      "Error 321, reqId 82: Error validating request.-'co' : cause - Invalid contract id\n",
-      "Error 321, reqId 84: Error validating request.-'co' : cause - Invalid contract id\n",
-      "Error 321, reqId 86: Error validating request.-'co' : cause - Invalid contract id\n",
-      "Error 321, reqId 88: Error validating request.-'co' : cause - Invalid contract id\n",
-      "Error 321, reqId 90: Error validating request.-'co' : cause - Invalid contract id\n",
-      "Error 200, reqId 114: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251219', strike=262.5, right='C', exchange='SMART')\n",
-      "Error 200, reqId 115: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251219', strike=262.5, right='C', exchange='SMART')\n",
-      "Error 200, reqId 128: No security definition has been found for the request, contract: Option(symbol='MSFT', lastTradeDateOrContractMonth='20251219', strike=517.5, right='C', exchange='SMART')\n",
-      "Error 200, reqId 129: No security definition has been found for the request, contract: Option(symbol='MSFT', lastTradeDateOrContractMonth='20251219', strike=517.5, right='C', exchange='SMART')\n",
-      "Error 200, reqId 142: No security definition has been found for the request, contract: Option(symbol='GOOG', lastTradeDateOrContractMonth='20251219', strike=257.5, right='C', exchange='SMART')\n",
-      "Error 200, reqId 143: No security definition has been found for the request, contract: Option(symbol='GOOG', lastTradeDateOrContractMonth='20251219', strike=257.5, right='C', exchange='SMART')\n",
-      "Error 200, reqId 156: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251219', strike=262.5, right='C', exchange='CBOE')\n",
-      "Error 200, reqId 157: No security definition has been found for the request, contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251219', strike=262.5, right='C', exchange='CBOE')\n",
-      "Error 200, reqId 170: No security definition has been found for the request, contract: Option(symbol='MSFT', lastTradeDateOrContractMonth='20251219', strike=517.5, right='C', exchange='CBOE')\n",
-      "Error 200, reqId 171: No security definition has been found for the request, contract: Option(symbol='MSFT', lastTradeDateOrContractMonth='20251219', strike=517.5, right='C', exchange='CBOE')\n",
-      "Error 200, reqId 184: No security definition has been found for the request, contract: Option(symbol='GOOG', lastTradeDateOrContractMonth='20251219', strike=257.5, right='C', exchange='CBOE')\n",
-      "Error 200, reqId 185: No security definition has been found for the request, contract: Option(symbol='GOOG', lastTradeDateOrContractMonth='20251219', strike=257.5, right='C', exchange='CBOE')\n"
+      "Error 321, reqId 3: Error validating request.-'co' : cause - Invalid contract id\n",
+      "Error 321, reqId 4: Error validating request.-'co' : cause - Invalid contract id\n",
+      "Error 321, reqId 5: Error validating request.-'co' : cause - Invalid contract id\n",
+      "Error 321, reqId 6: Error validating request.-'co' : cause - Invalid contract id\n",
+      "Error 321, reqId 7: Error validating request.-'co' : cause - Invalid contract id\n",
+      "Error 321, reqId 8: Error validating request.-'co' : cause - Invalid contract id\n",
+      "Error 321, reqId 9: Error validating request.-'co' : cause - Invalid contract id\n",
+      "Error 321, reqId 10: Error validating request.-'co' : cause - Invalid contract id\n",
+      "Error 321, reqId 11: Error validating request.-'co' : cause - Invalid contract id\n",
+      "Peer closed connection.\n"
      ]
     }
    ],
@@ -76,178 +59,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "0969583b-6c6d-430a-87f6-50bd592708cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ib_insync import *\n",
-    "from datetime import datetime\n",
-    "from math import log, sqrt, exp\n",
-    "from scipy.stats import norm\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
    "id": "5f858b2b-16ea-4b4d-b5a2-d11f676b34d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def black_scholes_call_price(S, K, T, r, sigma):\n",
-    "    if T <= 0:\n",
-    "        return max(S-K, 0)\n",
-    "    d1 = (log(S/K) + (r + 0.5*sigma**2)*T) / (sigma*sqrt(T))\n",
-    "    d2 = d1 - sigma*sqrt(T)\n",
-    "    return S*norm.cdf(d1) - K*exp(-r*T)*norm.cdf(d2)\n",
-    "\n",
-    "def implied_vol_call(S, K, T, r, market_price, tol=1e-5, max_iter=100):\n",
-    "    sigma = 0.2  # initial guess\n",
-    "    for i in range(max_iter):\n",
-    "        price = black_scholes_call_price(S, K, T, r, sigma)\n",
-    "        vega = S * norm.pdf((log(S/K)+(r+0.5*sigma**2)*T)/(sigma*sqrt(T))) * sqrt(T)\n",
-    "        if vega == 0:\n",
-    "            return None\n",
-    "        diff = price - market_price\n",
-    "        if abs(diff) < tol:\n",
-    "            return sigma\n",
-    "        sigma -= diff/vega\n",
-    "        if sigma <= 0:\n",
-    "            sigma = tol\n",
-    "    return sigma\n",
-    "\n",
     "def get_chain(symbol):\n",
+    "    \"\"\"Fetch option chain from IBKR for given symbol.\"\"\"\n",
     "    stock = Stock(symbol, 'SMART', 'USD')\n",
-    "    ib.qualifyContracts(stock)\n",
     "    chains = ib.reqSecDefOptParams(stock.symbol, '', stock.secType, stock.conId)\n",
     "    if not chains:\n",
-    "        return None\n",
-    "    chain = chains[0]\n",
-    "    strikes = sorted(chain.strikes)\n",
-    "    expirations = sorted([datetime.strptime(d, '%Y%m%d').date() for d in chain.expirations])\n",
-    "    return {'strikes': strikes, 'expirations': expirations}\n",
-    "\n",
-    "def get_atm_iv(symbol, expiry):\n",
-    "    chain = get_chain(symbol)\n",
-    "    if not chain:\n",
-    "        return None\n",
-    "    stock = Stock(symbol, 'SMART', 'USD')\n",
-    "    ib.qualifyContracts(stock)\n",
-    "    ticker_stock = ib.reqMktData(stock)\n",
-    "    ib.sleep(1)\n",
-    "    S = ticker_stock.last or ticker_stock.close\n",
-    "    if not S:\n",
-    "        return None\n",
-    "\n",
-    "    # pick closest strike that exists\n",
-    "    strikes = chain['strikes']\n",
-    "    strikes = [s for s in strikes if s > 0]\n",
-    "    if not strikes:\n",
-    "        return None\n",
-    "    atm_strike = min(strikes, key=lambda s: abs(s-S))\n",
-    "\n",
-    "    # try known exchanges for OPRA options\n",
-    "    for exch in ['CBOE', 'SMART']:\n",
-    "        option = Option(symbol, expiry.strftime('%Y%m%d'), atm_strike, 'C', exch)\n",
-    "        ib.qualifyContracts(option)\n",
-    "        ticker_opt = ib.reqMktData(option)\n",
-    "        ib.sleep(1)\n",
-    "        bid = ticker_opt.bid\n",
-    "        ask = ticker_opt.ask\n",
-    "        if bid is not None and ask is not None:\n",
-    "            market_price = (bid+ask)/2\n",
-    "            T = (expiry - datetime.now().date()).days / 365\n",
-    "            r = 0.05\n",
-    "            return implied_vol_call(S, atm_strike, T, r, market_price)\n",
-    "\n",
-    "    # if no valid quote found\n",
-    "    return None\n",
-    "\n",
-    "def forward_vol(iv1, iv2, t1, t2):\n",
-    "    if iv1 is None or iv2 is None:\n",
-    "        return None\n",
-    "    return np.sqrt((iv2**2*t2 - iv1**2*t1)/(t2-t1))\n",
-    "\n",
-    "def calc_forward_vol(symbol):\n",
-    "    chain = get_chain(symbol)\n",
-    "    if not chain:\n",
     "        print(f\"No option chain for {symbol}\")\n",
     "        return None\n",
+    "    chain = chains[0]  # use first exchange returned (e.g., CBOE)\n",
+    "    return chain\n",
+    "\n",
+    "def get_target_expiries(symbol, target_days=(30, 60)):\n",
+    "    \"\"\"Return expiries closest to 30 and 60 days from today.\"\"\"\n",
+    "    chain = get_chain(symbol)\n",
+    "    if not chain or not chain.expirations:\n",
+    "        return []\n",
+    "    \n",
     "    today = datetime.now().date()\n",
-    "    exp30 = min(chain['expirations'], key=lambda d: abs((d-today).days - 30))\n",
-    "    exp60 = min(chain['expirations'], key=lambda d: abs((d-today).days - 60))\n",
+    "    expiries = [datetime.strptime(d, '%Y%m%d').date() for d in chain.expirations]\n",
+    "    \n",
+    "    results = []\n",
+    "    for td in target_days:\n",
+    "        exp = min(expiries, key=lambda d: abs((d - today).days - td))\n",
+    "        results.append(exp)\n",
+    "    \n",
+    "    return results\n",
+    "\n",
+    "def get_atm_iv(symbol, expiry_date):\n",
+    "    \"\"\"Fetch ATM call IV for the nearest strike.\"\"\"\n",
+    "    stock = Stock(symbol, 'SMART', 'USD')\n",
+    "    chain = ib.reqSecDefOptParams(stock.symbol, '', stock.secType, stock.conId)\n",
+    "    if not chain:\n",
+    "        return None\n",
+    "    \n",
+    "    chain = chain[0]\n",
+    "    strikes = sorted([s for s in chain.strikes])\n",
+    "    if not strikes:\n",
+    "        return None\n",
+    "    \n",
+    "    # approximate ATM strike\n",
+    "    ib.qualifyContracts(stock)\n",
+    "    stock_price = ib.reqMktData(stock)\n",
+    "    ib.sleep(1)\n",
+    "    S = stock_price.last\n",
+    "    atm_strike = min(strikes, key=lambda k: abs(k - S))\n",
+    "    \n",
+    "    option = Option(symbol, expiry_date.strftime('%Y%m%d'), atm_strike, 'C', 'SMART')\n",
+    "    ib.qualifyContracts(option)\n",
+    "    \n",
+    "    ticker = ib.reqMktData(option, '', False, False)\n",
+    "    ib.sleep(2)  # wait for data\n",
+    "    iv = getattr(ticker, 'impliedVol', None)\n",
+    "    return iv\n",
+    "\n",
+    "def forward_vol(iv1, iv2, t1, t2):\n",
+    "    \"\"\"Compute annualized forward volatility.\"\"\"\n",
+    "    if iv1 is None or iv2 is None:\n",
+    "        return None\n",
+    "    try:\n",
+    "        fwd_var = ((iv2**2 * t2) - (iv1**2 * t1)) / (t2 - t1)\n",
+    "        if fwd_var < 0:\n",
+    "            return None\n",
+    "        return math.sqrt(fwd_var)\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "# -----------------------\n",
+    "# Main calculation\n",
+    "# -----------------------\n",
+    "def calc_forward_vol(symbol):\n",
+    "    expiries = get_target_expiries(symbol, target_days=(30, 60))\n",
+    "    if not expiries or len(expiries) < 2:\n",
+    "        print(f\"No suitable expiries for {symbol}\")\n",
+    "        return None\n",
+    "    \n",
+    "    today = datetime.now().date()\n",
+    "    exp30, exp60 = expiries\n",
+    "    \n",
     "    iv30 = get_atm_iv(symbol, exp30)\n",
     "    iv60 = get_atm_iv(symbol, exp60)\n",
-    "    fwd = forward_vol(iv30, iv60, 30/365, 60/365)\n",
+    "    \n",
+    "    fwd = None\n",
+    "    if iv30 is not None and iv60 is not None:\n",
+    "        t1 = (exp30 - today).days / 365\n",
+    "        t2 = (exp60 - today).days / 365\n",
+    "        fwd = forward_vol(iv30, iv60, t1, t2)\n",
+    "    \n",
     "    print(f\"{symbol} results:\")\n",
-    "    print(f\"  30D IV ({exp30}): {iv30 if iv30 else 'unavailable'}\")\n",
-    "    print(f\"  60D IV ({exp60}): {iv60 if iv60 else 'unavailable'}\")\n",
-    "    print(f\"  Forward Vol: {fwd if fwd else 'unavailable'}\")\n",
-    "    return {'symbol': symbol, 'iv30': iv30, 'iv60': iv60, 'forward_vol': fwd}\n"
+    "    print(f\"  {exp30} IV: {iv30}\")\n",
+    "    print(f\"  {exp60} IV: {iv60}\")\n",
+    "    print(f\"  Forward Vol: {fwd}\")\n",
+    "    print()\n",
+    "    \n",
+    "    return {\n",
+    "        'symbol': symbol,\n",
+    "        'expiry_30D': exp30,\n",
+    "        'iv_30D': iv30,\n",
+    "        'expiry_60D': exp60,\n",
+    "        'iv_60D': iv60,\n",
+    "        'forward_vol': fwd\n",
+    "    }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 83,
    "id": "1a550964-79a7-468d-aa66-d8825f383753",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unknown contract: Option(symbol='AAPL', lastTradeDateOrContractMonth='20251219', strike=262.5, right='C', exchange='CBOE')\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AAPL results:\n",
-      "  30D IV (2025-11-21): 0.28024726288324975\n",
-      "  60D IV (2025-12-19): nan\n",
-      "  Forward Vol: nan\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unknown contract: Option(symbol='MSFT', lastTradeDateOrContractMonth='20251219', strike=517.5, right='C', exchange='CBOE')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSFT results:\n",
-      "  30D IV (2025-11-21): 0.2748034349259272\n",
-      "  60D IV (2025-12-19): nan\n",
-      "  Forward Vol: nan\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unknown contract: Option(symbol='GOOG', lastTradeDateOrContractMonth='20251219', strike=257.5, right='C', exchange='CBOE')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GOOG results:\n",
-      "  30D IV (2025-11-21): 0.4129982892386392\n",
-      "  60D IV (2025-12-19): nan\n",
-      "  Forward Vol: nan\n"
+      "No option chain for AAPL\n",
+      "No suitable expiries for AAPL\n",
+      "No option chain for MSFT\n",
+      "No suitable expiries for MSFT\n",
+      "No option chain for GOOG\n",
+      "No suitable expiries for GOOG\n"
      ]
     }
    ],
    "source": [
-    "tickers = ['AAPL','MSFT','GOOG']\n",
+    "tickers = ['AAPL', 'MSFT', 'GOOG']\n",
     "results = []\n",
+    "\n",
     "for t in tickers:\n",
     "    res = calc_forward_vol(t)\n",
     "    if res:\n",
@@ -266,6 +207,78 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c80d91c1-cc49-4a43-af68-5c5d4a19e610",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23ee5dcd-039c-4d8f-a496-a2485d5a459b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0af3d719-6c40-4bfe-916d-4edaa1748ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6278dac-c5fe-4714-973e-7fe8f13bcf6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad39cc11-b5d9-4bd5-9909-0b3209b21b01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dc50077-f0c9-4082-a0d7-9d3fa7c8314e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4833b92-6f01-457e-b0cb-3a08e03ab6cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d69e0c21-cc99-4a62-922f-2f4e9d7fc097",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c1db6a4-ee7c-4725-bef0-267cfb87651d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "214bf3d9-e86e-432d-ab9c-0feff244e771",
    "metadata": {},
    "outputs": [],
    "source": []
